onClick attribute for reset icon to restart

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <i class="far fa-hand-spock" title="Spock" id="computerSpock"></i>
         </div>
         <!-- Reset Icon -->
-        <i class="fas fa-sync-alt reset-icon" title="Reset" ="resetAll()"></i>
+        <i class="fas fa-sync-alt reset-icon" title="Reset" onclick="resetAll()"></i>
         <!-- Results Text -->
         <div class="result-container">
             <h3 class="result-text" id="resultText"></h3>
